Update sbt to 1.5.2